# industrial_bt_framework

./: CMakeLists.txt  README.md  package.xml
bt_trees/: example_pick_place.xml
config/: bt_runner.example.yaml  motion_profiles.example.yaml  scene.example.yaml
doc/: CUSTOMIZATION.md
include/industrial_bt_framework/: bt_nodes.hpp  cartesian_backend.hpp  motion_profile.hpp  perception_client.hpp  robot_client.hpp  scene_client.hpp  tool_registry.hpp
launch/: bt_runner.launch.py
plugins/: industrial_bt_plugins.xml
src/: bt_nodes.cpp  bt_runner_node.cpp  bt_runner_node_visual.cpp  perception_client.cpp  robot_client.cpp  scene_client.cpp  scene_manager_node.cpp  tool_registry.cpp
src/backends/: moveit_cartesian_backend.cpp
srv/: SetScenePose.srv
