<?xml version="1.0"?>
<package format="3">
  <name>industrial_bt_framework</name>
  <version>0.1.0</version>
  <description>
    Robot- and application-agnostic BehaviorTree.CPP framework for industrial
    pick-and-place. Provides generic BT primitives, a pluggable Cartesian
    motion backend interface (MoveIt default), a YAML-driven tool registry,
    a generic scene manager, and a reusable launch template. Adapt to any
    MoveIt-configured robot by editing YAMLs and the BT XML.
  </description>

  <maintainer email="fra@example.com">Fra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>pluginlib</depend>

  <buildtool_export_depend>behaviortree_cpp</buildtool_export_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugins/industrial_bt_plugins.xml"/>
  </export>
</package>
